--- a/apps/mantine-react-table-docs/pages/docs/guides/async-loading.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/async-loading.mdx
@@ -61,7 +61,7 @@ const table = useMantineReactTable({
 
 ### Customize Linear Progress Bars
 
-You can customize the linear progress bars by passing props to the `mantineProgressProps` prop.
+You can customize the linear progress bars by passing props to the `mantineProgressProps` table option.
 
 <ProgressExample />
 
