--- a/apps/mantine-react-table-docs/pages/docs/guides/click-to-copy.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/click-to-copy.mdx
@@ -57,7 +57,7 @@ const table = useMantineReactTable({
 
 ### Customize Copy Buttons
 
-The click to copy feature is built on top of the Mantine UnstyledButton and CopyButton components. You can customize the copy button by passing in the `mantineCopyButtonProps` prop or as a column option in a column definition.
+The click to copy feature is built on top of the Mantine UnstyledButton and CopyButton components. You can customize the copy button by passing in the `mantineCopyButtonProps` table or column option.
 
 ```tsx
 const table = useMantineReactTable({
