--- a/apps/mantine-react-table-docs/pages/docs/guides/column-actions-menu.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-actions-menu.mdx
@@ -43,13 +43,13 @@ By default, Mantine React Table renders a column actions button for each column 
 
 ### Disable or Hide Column Actions Buttons
 
-You can set the `enableColumnActions` prop to `false` in the table to disable this feature and hide the button in each column header completely.
+You can set the `enableColumnActions` table option to `false` to disable this feature and hide the button in each column header completely.
 
 ```tsx
 <MantineReactTable data={data} columns={columns} enableColumnActions={false} />
 ```
 
-Alternatively, if you only want to hide the column actions button in specific columns, you can set the `enableColumnActions` property for the desired column definition to `false` instead.
+Alternatively, if you only want to hide the column actions button in specific columns, you can set the `enableColumnActions` column option to `false` instead.
 
 In this demo, we disable the column actions button for the 'ID' column.
 
