--- a/apps/mantine-react-table-docs/pages/docs/guides/column-hiding.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-hiding.mdx
@@ -34,7 +34,7 @@ The column hiding feature is enabled by default and allows the user to hide data
 
 You can easily hide columns by default by setting the `columnVisibility` `state` or `initialState` to hide the desired columns by id.
 
-```tsx
+```jsx
 <MantineReactTable
   columns={columns}
   data={data}
@@ -46,7 +46,7 @@ You can easily hide columns by default by setting the `columnVisibility` `state`
 
 If you do not want this feature to be enabled at all, you can disable it by setting the `enableHiding` prop to `false`.
 
-```tsx
+```jsx
 const table = useMantineReactTable({
   columns,
   data,
@@ -64,16 +64,16 @@ If you want to hide certain columns by default, you can specify an column visibi
 
 By default, column hiding is only enabled on data columns. Display columns, such as `mrt-row-numbers`, `mrt-row-select`, etc., do not have column hiding enabled, and their toggle will be disabled. You can turn that back on by setting the `enableHiding` option to `true` in the `displayColumnsOptions` prop.
 
-```tsx
-<MantineReactTable
-  columns={columns}
-  data={data}
-  displayColumnDefOptions={{
+```jsx
+const table = useMantineReactTable({
+  columns,
+  data,
+  displayColumnDefOptions: {
     'mrt-row-numbers': {
       enableHiding: true, //now row numbers are hidable too
     },
-  }}
-/>
+  },
+});
 ```
 
 See the [Display Columns Feature Guide](/docs/guides/display-columns#display-column-definition-options-prop) for a more in depth explanation of the `displayColumnsOptions` prop.
