--- a/apps/mantine-react-table-docs/pages/docs/guides/column-ordering-dnd.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-ordering-dnd.mdx
@@ -44,16 +44,16 @@ Whether you just want to change the default column order in your table or let co
 
 ### Change the Default Column Order
 
-By Default, Mantine React Table will order the columns in the order they are defined in the `columns` prop. And Display Columns such as Actions, Selection, Expansion, etc., get added to either the beginning or the end of the table. You can customize all of this by defining your own `columnOrder` State and passing it either to the `initialState` or `state` props.
+By Default, Mantine React Table will order the columns in the order they are defined in the `columns` definition. And Display Columns such as Actions, Selection, Expansion, etc., get added to either the beginning or the end of the table. You can customize all of this by defining your own `columnOrder` State and passing it either to the `initialState` or `state` props.
 
 The Column Order State is an array of string column ids, that come from the ids or accessorKeys that you defined in your column definitions.
 
-```tsx
-<MantineReactTable
-  data={data}
-  columns={columns}
-  enableRowSelection
-  initialState={{
+```jsx
+const table = useMantineReactTable({
+  data,
+  columns,
+  enableRowSelection: true,
+  initialState: {
     columnOrder: [
       'name',
       'email',
@@ -62,13 +62,13 @@ The Column Order State is an array of string column ids, that come from the ids 
       'country',
       'mrt-row-select', //move the built-in selection column to the end of the table
     ],
-  }}
-/>
+  },
+});
 ```
 
 ### Manage Column Order State
 
-If you need to manage the `columnOrder` state yourself, you can do so in the `state` prop and `onColumnOrderChange` callback, but you will also need to initialize the `columnOrder` state yourself.
+If you need to manage the `columnOrder` state yourself, you can do so in the `state` table option and `onColumnOrderChange` callback, but you will also need to initialize the `columnOrder` state yourself.
 
 ```jsx
 const columns = [
@@ -80,20 +80,22 @@ const [columnOrder, setColumnOrder] = useState(
   columns.map((c) => c.accessorKey), //array of column ids
 );
 
-return (
-  <MantineReactTable
-    data={data}
-    columns={columns}
-    enableRowSelection
-    state={state}
-    onColumnOrderChange={onColumnOrderChange}
-  />
-);
+const table = useMantineReactTable({
+  data,
+  columns,
+  enableRowSelection: true,
+  state: {
+    columnOrder,
+  },
+  onColumnOrderChange: setColumnOrder,
+});
+
+return <MantineReactTable table={table} />;
 ```
 
 ### Enable Column Ordering with Drag and Drop
 
-Mantine React Table has a built-in drag and drop feature to reorder columns. This feature is enabled by passing the `enableColumnOrdering` prop.
+Mantine React Table has a built-in drag and drop feature to reorder columns. This feature is enabled by passing the `enableColumnOrdering` table option.
 
 The ability for a column to have a drag and drop handle can be specified by setting the `enableColumnOrdering` option on the column.
 
