--- a/apps/mantine-react-table-docs/pages/docs/guides/custom-icons.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/custom-icons.mdx
@@ -24,19 +24,21 @@ If you need to, you can customize and replace some or all of the icons with your
 
 To replace a default icon, specify the icon in the `icons` prop. You should get TS hints for the name of the icons you can replace, but you can also consult [this source file](https://github.com/KevinVandy/mantine-react-table/blob/main/packages/mantine-react-table/src/icons.ts) for a list of all the icons you can replace.
 
-```jsx
-<MantineReactTable
-  columns={columns}
-  data={data}
-  icons={{
-    //change sort icon, connect internal props so that it gets styled correctly
-    IconArrowDown: (props) => <FontAwesomeIcon icon={faSortDown} {...props} />,
-    IconSearch: () => <FontAwesomeIcon icon={faSearch} />,
-    IconArrowsSort: (props) => (
-      <FontAwesomeIcon icon={faArrowDownWideShort} {...props} />
-    ),
-  }}
-/>
+```tsx
+const faIcons: Partial<MRT_Icons> = {
+  //change sort icon, connect internal props so that it gets styled correctly
+  IconArrowDown: (props) => <FontAwesomeIcon icon={faSortDown} {...props} />,
+  IconSearch: () => <FontAwesomeIcon icon={faSearch} />,
+  IconArrowsSort: (props) => (
+    <FontAwesomeIcon icon={faArrowDownWideShort} {...props} />
+  ),
+};
+
+const table = useMantineReactTable({
+  columns,
+  data,
+  icons: faIcons,
+});
 ```
 
 Some icons have `style` props that get applied to them internally. So, in order to preserve the ability of those Icons to be styled with the correct paddings, margins, or rotations, you should pass in `{...props}` to your custom icon component as a best practice.
