--- a/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
@@ -118,11 +118,11 @@ Each prop can either be passed as an object or as a callback function where you 
 
 ### Styling Mantine Components
 
-Each `mantine...Prop` has multiple options for you to add styling to the component. You could simply pass `className` or `style` props to any `mantine...Props` prop, but there is also the `sx` prop...which totally rocks!
-
-> Hint: You should just use the `sx` prop for all styling instead of `className` or `style` props.
+Each `mantine...Prop` has multiple options for you to add styling to the component. You could simply pass `className` or `style` props to any `mantine...Props` prop, but there is also the `sx` prop.
 
 #### The SX Prop
+
+> Note: Mantine V7 (coming out at the end of 2023) is getting rid of emotion and the sx prop. So MRT V2 is going to have very different advice than down below. Consider using CSS modules with the `className` prop instead of the `sx` prop. Or just using the `style` prop. Or consider using Tailwind. 🤪
 
 The recommended way to style Mantine components in Mantine React Table will be the [`sx` prop](https://mantine.dev/styles/sx/) throughout this docs site, as it is both the most simple and the most powerful way to style Mantine components. They can work and be as simple as a `style` prop, but behind the scenes, they work more like emotion styled-components by using Emotion.
 
