--- a/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
@@ -39,7 +39,7 @@ If you are using **Mantine V6**, you will want to install the MRT `v1.0.0` betas
 
 > You do NOT need to install `@tanstack/react-table`, as it is already an internal dependency of `mantine-react-table`, and must use an exact version already specified internally.
 >
-> All internal dependencies: `@tanstack/match-sorter-utils`, `@tanstack/react-table`, `@tanstack/react-virtual`, and `highlight-words`
+> All internal dependencies: `@tanstack/react-table`, `@tanstack/react-virtual`, and `@tanstack/match-sorter-utils`
 
 ### Common Errors
 
@@ -52,7 +52,7 @@ You likely forgot to export your component from the file it's defined in,
 or you might have mixed up default and named imports.
 ```
 
-You probably do not have the correct version of Mantine or Tabler Icons installed. 
+You probably do not have the correct version of Mantine or Tabler Icons installed.
 
 Make sure all mantine packages are at least v6.
 
