--- a/apps/mantine-react-table-docs/pages/docs/guides/column-filtering.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-filtering.mdx
@@ -38,6 +38,7 @@ Filtering is one of the most powerful features of Mantine React Table and is ena
       'getFacetedRowModel',
       'getFacetedUniqueValues',
       'getFilteredRowModel',
+      'mantineHighlightProps',
       'mantineFilterAutocompleteProps',
       'mantineFilterCheckboxProps',
       'mantineFilterMultiSelectProps',
