refactor react-query examples

--- a/apps/mantine-react-table-docs/pages/docs/examples/react-query.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/examples/react-query.mdx
@@ -21,6 +21,8 @@ import Example from '../../../examples/react-query';
 
 This is just like the [Remote Data Example](/docs/examples/remote), but react-query is used to simplify all the state management of the fetching and loading of data.
 
+React Query [a.k.a TanStack Query](https://tanstack.com/query/latest) is a library made by the same team that made TanStack Table and is the best way to fetch data in client-side React applications. It has a ton of features that make working with table features a lot easier. It is highly recommended that you investigate using it in your own applications.
+
 Also, be sure to check out the [Virtualized Example](/docs/examples/virtualized), which shows off the use of another TanStack library, TanStack React Virtual, to render thousands of rows at once while still maintaining great performance.
 
 <Example />
